<resources>
    <string name="app_name">LOAN CALCULATOR</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="HomeValue">Medium Text</string>
    <string name="DownPayment">Down Payment</string>
    <string name="InterestRate">Interest Rate</string>
    <string name="Terms">Terms</string>
    <string name="PropertyTxRate">Property Tax Rate</string>
    <string name="MonthlyPaymentAmount">Monthly payment amount</string>
    <string name="TotalInterestPaid">Total interest paid</string>
    <string name="TotalPropertyTaxPaid">Total property tax paid</string>
    <string name="PayOffDate">Pay off date</string>
    <string-array name="termsArr">
        <item>15 year</item>
        <item>20 year</item>
        <item>25 year</item>
        <item>30 year</item>
        <item>40 year</item>
    </string-array>
</resources>
