<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Home Value"
            android:id="@+id/textView50"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#47e2ff"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="$"
            android:id="@+id/textView3"
            android:layout_row="0"
            android:layout_column="3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DownPayment"
            android:id="@+id/textView51"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="#47e2ff"/>

        <EditText
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/HomeValue"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/InterestRate"
            android:id="@+id/textView52"
            android:layout_row="3"
            android:layout_column="0"
            android:textColor="#47e2ff"/>

        <EditText
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/DownPayment"
            android:layout_row="2"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="$"
            android:id="@+id/textView4"
            android:layout_row="2"
            android:layout_column="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Terms"
            android:id="@+id/textView53"
            android:layout_row="4"
            android:layout_column="0"
            android:textColor="#47e2ff"/>

        <EditText
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/InterestRate"
            android:layout_row="3"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="%"
            android:id="@+id/textView6"
            android:layout_row="3"
            android:layout_column="3" />

        <EditText
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/Terms"
            android:layout_row="4"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Yrs"
            android:id="@+id/textView"
            android:layout_row="4"
            android:layout_column="3"
            />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PropertyTxRate"
            android:id="@+id/textView54"
            android:layout_row="5"
            android:layout_column="0"
            android:textColor="#47e2ff"/>

        <EditText
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/PropertyTaxRate"
            android:layout_row="5"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="%"
            android:id="@+id/textView10"
            android:layout_row="5"
            android:layout_column="3" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:id="@+id/CalculateButton"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:background="#47bbff"
        android:textColor="#ffffff"
        android:layout_alignBaseline="@+id/ResetButton"
        android:layout_alignBottom="@+id/ResetButton"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_alignEnd="@+id/gridLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:id="@+id/ResetButton"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="58dp"
        android:background="#47bbff"
        android:textColor="#ffffff"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>